[gd_scene load_steps=5 format=2]

[ext_resource path="res://shmup/ennemies/trashnode2.gd" type="Script" id=1]
[ext_resource path="res://shmup/ennemies/trash2.gd" type="Script" id=2]
[ext_resource path="res://shmup/images/Voiture_1.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 12.6566, 18.3237 )

[node name="trash" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="TimerBullet1" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="poubelle" type="KinematicBody2D" parent="." index="1" groups=[
"Ennemies",
]]

position = Vector2( 0.583977, 2.04392 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
speed = 200
deplacement = "GD"

[node name="hitbox" type="CollisionShape2D" parent="poubelle" index="0"]

position = Vector2( -2.09129, 0.150391 )
scale = Vector2( 3.37194, 1.0031 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="poubelle" index="1"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Visibility" type="VisibilityNotifier2D" parent="poubelle" index="2"]

rect = Rect2( -10, -10, 20, 20 )

[node name="TimerGD" type="Timer" parent="poubelle" index="3"]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = true

[node name="TimerFree" type="Timer" parent="poubelle" index="4"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[connection signal="timeout" from="TimerBullet1" to="." method="_on_TimerBullet1_timeout"]

[connection signal="screen_exited" from="poubelle/Visibility" to="." method="_on_Visibility_screen_exited"]

[connection signal="timeout" from="poubelle/TimerGD" to="poubelle" method="_on_TimerGD_timeout"]

[connection signal="timeout" from="poubelle/TimerFree" to="poubelle" method="_on_TimerFree_timeout"]


